// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form radio group component should render disabled when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    disabled=""
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with error when passed 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-error-message"
      id="radio-group-error"
    >
      Some error message
    </span>
    <div
      class="govuk-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with hint when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-hint"
    >
      Put some text in the box below
    </span>
    <div
      class="govuk-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with label when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        My text field
      </span>
    </legend>
    <div
      class="govuk-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Form radio group component should render with value when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="radio-group"
  >
    <legend
      class="govuk-fieldset__legend"
      id="radio-group-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <div
      class="govuk-radios"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          checked=""
          class="govuk-radios__input"
          id="radio-group-A"
          name="radio-group"
          type="radio"
          value="A"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-A"
        >
          isA
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-B"
          name="radio-group"
          type="radio"
          value="B"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-B"
        >
          isB
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-group-C"
          name="radio-group"
          type="radio"
          value="C"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-group-C"
        >
          isC
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;
